--- a/VK/VK/Base.lproj/Main.storyboard
+++ b/VK/VK/Base.lproj/Main.storyboard
@@ -52,7 +52,6 @@
                                         </state>
                                         <connections>
                                             <action selector="buttonTapped:" destination="040-EU-6tB" eventType="touchUpInside" id="goj-gq-ru4"/>
-                                            <segue destination="Zmq-Wq-CZl" kind="show" identifier="logInScreen" id="SPj-Tg-wal"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="пароль" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0s-Ka-yII">
@@ -102,6 +101,7 @@
                         <outlet property="loginField" destination="aU6-dS-1ox" id="95C-uf-zgJ"/>
                         <outlet property="passwordField" destination="S6A-lb-Zl9" id="cne-J7-wkm"/>
                         <outlet property="scrollView" destination="GxH-H5-i4Z" id="4PW-Pb-bR0"/>
+                        <segue destination="Zmq-Wq-CZl" kind="presentation" identifier="logInScreen" id="5U4-xl-1l6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1eI-3O-zyQ" sceneMemberID="firstResponder"/>
@@ -113,11 +113,11 @@
             <objects>
                 <viewController modalPresentationStyle="fullScreen" id="quV-f1-UJY" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1SH-mV-0Nm">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U56-PC-ha5">
-                                <rect key="frame" x="331" y="20" width="63" height="38"/>
+                                <rect key="frame" x="331" y="64" width="63" height="38"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="63" id="Qgy-9x-LUz"/>
                                     <constraint firstAttribute="height" constant="38" id="hMJ-5C-RJM"/>
@@ -148,11 +148,11 @@
             <objects>
                 <viewController id="YHB-RV-xYy" customClass="NewsViewController" customModule="VK" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="R87-X6-Gl8">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7oX-yC-QLX">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="759"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="YHB-RV-xYy" id="XPD-N3-ifl"/>
@@ -185,7 +185,7 @@
                     <tabBarItem key="tabBarItem" title="друзья" id="82e-N1-CAw"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7FN-8S-Yej">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -202,11 +202,11 @@
             <objects>
                 <viewController id="kZR-fm-Pjg" customClass="FriendsViewController" customModule="VK" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="T2y-Dy-Bdc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1FJ-vi-xQE">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="759"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reusableCell" id="rzK-7G-2fd" customClass="UserTableViewCell" customModule="VK" customModuleProvider="target">
@@ -372,11 +372,42 @@
                     <navigationItem key="navigationItem" title="фотографии" id="9P7-hW-JyS"/>
                     <connections>
                         <outlet property="collectionView" destination="YW8-Fd-gw1" id="4Ka-ub-fmd"/>
+                        <segue destination="vMe-By-58X" kind="show" identifier="detailPhoto" id="4vr-Za-187"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kjn-cH-9ZH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3921.739130434783" y="-468.08035714285711"/>
+        </scene>
+        <!--Detail Photo View Controller-->
+        <scene sceneID="xue-ap-U7v">
+            <objects>
+                <viewController id="vMe-By-58X" customClass="DetailPhotoViewController" customModule="VK" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JEb-kB-8kM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7Gf-pj-XUg">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ypl-5q-zYQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7Gf-pj-XUg" firstAttribute="leading" secondItem="ypl-5q-zYQ" secondAttribute="leading" id="Als-nJ-2SI"/>
+                            <constraint firstItem="ypl-5q-zYQ" firstAttribute="bottom" secondItem="7Gf-pj-XUg" secondAttribute="bottom" id="VhL-5X-GYa"/>
+                            <constraint firstItem="ypl-5q-zYQ" firstAttribute="trailing" secondItem="7Gf-pj-XUg" secondAttribute="trailing" id="eeP-Ty-vbQ"/>
+                            <constraint firstItem="7Gf-pj-XUg" firstAttribute="top" secondItem="ypl-5q-zYQ" secondAttribute="top" id="qb9-P4-xoZ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="GEc-xY-tpb"/>
+                    <connections>
+                        <outlet property="detailPhoto" destination="7Gf-pj-XUg" id="bYB-3B-4kX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="REa-DK-nLU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4800" y="-468"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="wQ7-NJ-vrp">
@@ -407,7 +438,7 @@
                     <tabBarItem key="tabBarItem" title="мои группы" id="W3w-Vh-IiS"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="b3h-NK-tAf">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -424,11 +455,11 @@
             <objects>
                 <viewController id="7Pe-Ci-FbK" customClass="MyGroupViewController" customModule="VK" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KS1-Gi-4ZT">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dte-ak-rLJ">
-                                <rect key="frame" x="0.0" y="56" width="414" height="703"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reusableCell" id="amx-Iy-oFX" customClass="UserTableViewCell" customModule="VK" customModuleProvider="target">
@@ -527,11 +558,11 @@
             <objects>
                 <viewController id="JFv-BK-UdB" customClass="GlobalGroupViewController" customModule="VK" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2UW-Zi-fg0">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jrs-O4-93Y">
-                                <rect key="frame" x="0.0" y="56" width="414" height="703"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reusableCell" id="ki6-FL-jVK" customClass="UserTableViewCell" customModule="VK" customModuleProvider="target">
