--- a/VK/VK/Base.lproj/Main.storyboard
+++ b/VK/VK/Base.lproj/Main.storyboard
@@ -181,7 +181,7 @@
         <!--друзья-->
         <scene sceneID="HMh-7I-vEw">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="Ami-vW-fad" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="Ami-vW-fad" customClass="CustomNavigatorController" customModule="VK" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="друзья" id="82e-N1-CAw"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7FN-8S-Yej">
